--- a/shared/css/wiki-integration.css
+++ b/shared/css/wiki-integration.css
@@ -33,7 +33,7 @@
  */
 
 .mw-body-content .mw-heading3 {
-    font-family: 'PT Serif', 'Palatino', 'Georgia', serif;
+    font-family: 'Alegreya', 'Palatino', 'Georgia', serif;
 }
 
 ::placeholder {
@@ -45,7 +45,7 @@
 }
 
 .mw-body h1, .mw-body-content .mw-heading6 {
-    font-family: 'PT Serif','Palatino','Georgia',serif;
+    font-family: 'Alegreya','Palatino','Georgia',serif;
 }
 
 .wikitable > * > tr > td.table-noborder {
@@ -62,7 +62,7 @@ table.mw-interwikitable.body td.mw-interwikitable-local-yes {
 
 .mw-body-content h1 {
     border-bottom: 2px solid var(--sidebar);
-    font-family: 'PT Serif','Palatino','Georgia',serif;
+    font-family: 'Alegreya','Palatino','Georgia',serif;
     font-size: 1.8em;
     padding-bottom: 0.2em;
 }
@@ -89,7 +89,7 @@ body td.mw-abusefilter-history-changed {
 }
 
 .mw-body-content h3 {
-    font-family: 'PT Serif','Palatino','Georgia',serif;
+    font-family: 'Alegreya','Palatino','Georgia',serif;
     font-size: 1.3em;
 }
 
@@ -378,7 +378,7 @@ body.page-Old_School_RuneScape_Wiki .mw-parser-output {
 
 .mw-body-content h2 {
     border-bottom: 1px solid var(--sidebar);
-    font-family: 'PT Serif','Palatino','Georgia',serif;
+    font-family: 'Alegreya','Palatino','Georgia',serif;
     font-size: 1.5em;
     padding-bottom: 0.2em;
 }
@@ -600,7 +600,7 @@ h6 {
 
 .documentation h2, .documentation hr {
     color: var(--text-color);
-    font-family: 'PT Serif','Palatino','Georgia',serif;
+    font-family: 'Alegreya','Palatino','Georgia',serif;
 }
 
 
@@ -1129,7 +1129,7 @@ h6 {
 
 .mw-body .mw-heading1, .mw-body h1, .mw-body-content .mw-heading1, .mw-body-content .mw-heading2, .mw-body-content .mw-heading3, .mw-body-content .mw-heading4, .mw-body-content .mw-heading5, .mw-body-content .mw-heading6, .mw-body-content h1, .mw-body-content h2, .mw-body-content h3, .mw-body-content h4, .mw-body-content h5, .mw-body-content h6 {
     color: var(--text-color);
-    font-family: 'PT Serif','Palatino','Georgia',serif;
+    font-family: 'Alegreya','Palatino','Georgia',serif;
 }
 
 .mw-rcfilters-ui-tagItemWidget-popup-content {
@@ -4628,7 +4628,7 @@ table.mw-abuselog-details td, table.mw-abuselog-details th {
 
 .mw-heading, h1, h2, h3, h4, h5, h6 {
     color: var(--text-color);
-    font-family: 'PT Serif','Palatino','Georgia',serif;
+    font-family: 'Alegreya','Palatino','Georgia',serif;
 }
 
 .mwe-popups .mw-ui-icon-element:not(.disabled):hover {
@@ -4670,7 +4670,7 @@ table.mw-abuselog-details th {
 
 .mw-heading1, .mw-heading2, h1, h2 {
     color: var(--text-color);
-    font-family: 'PT Serif','Palatino','Georgia',serif;
+    font-family: 'Alegreya','Palatino','Georgia',serif;
 }
 
 .mw-rcfilters-ui-changesListWrapperWidget-previousChangesIndicator {
@@ -5131,7 +5131,7 @@ ol.references li:target {
 
 .collapsed-sec {
     color: var(--heading-color);
-    font-family: 'PT Serif','Palatino','Georgia',serif;
+    font-family: 'Alegreya','Palatino','Georgia',serif;
     font-weight: bold;
     text-shadow: 1px 1px rgba(255,255,255,0.3);
 }
@@ -5921,7 +5921,7 @@ cite {
 }
 
 .fairycode {
-    font-family: 'PT Serif','Palatino','Georgia',serif;
+    font-family: 'Alegreya','Palatino','Georgia',serif;
     font-size: 120%;
     font-weight: bold;
     letter-spacing: 1px;
