--- a/shared/css/modules/layout.css
+++ b/shared/css/modules/layout.css
@@ -520,7 +520,7 @@
 
 .mw-body .mw-heading1, .mw-body h1, .mw-body-content .mw-heading1, .mw-body-content .mw-heading2, .mw-body-content .mw-heading3, .mw-body-content .mw-heading4, .mw-body-content .mw-heading5, .mw-body-content .mw-heading6, .mw-body-content h1, .mw-body-content h2, .mw-body-content h3, .mw-body-content h4, .mw-body-content h5, .mw-body-content h6 {
     color: var(--text-color);
-    font-family: 'PT Serif','Palatino','Georgia',serif;
+    font-family: 'Alegreya','Palatino','Georgia',serif;
 }
 
 .mw-rcfilters-ui-tagItemWidget-popup-content {
