--- a/shared/css/modules/typography.css
+++ b/shared/css/modules/typography.css
@@ -134,6 +134,6 @@ h6 {
 
 .documentation h2, .documentation hr {
     color: var(--text-color);
-    font-family: 'PT Serif','Palatino','Georgia',serif;
+    font-family: 'Alegreya','Palatino','Georgia',serif;
 }
 
